# bloggerarman

./: db.sqlite3  manage.py  pyproject.toml
bloggerarman/: asgi.py  settings.py  urls.py  wsgi.py
home/: admin.py  models.py  urls.py  views.py
home/migrations/: 0001_initial.py
login/: urls.py  views.py
templates/: base.html  blog.html  blogpost.html  contact.html  index.html  login.html  register.html  search.html
