[tool.poetry]
name = "blogging_with_arman"
version = "1.1.1"
description = "added poetry"
authors = ["armansikriwal <armankumarsikriwal3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
